--- a/ZadanieNaAvtomatKolegWPF/AddEkzamenWindow.xaml
+++ b/ZadanieNaAvtomatKolegWPF/AddEkzamenWindow.xaml
@@ -1,7 +1,11 @@
-﻿<Window x:Class="ZadanieNaAvtomatKollegWPFNET1.AddEkzamenWindow"
+﻿<Window x:Class="ZadanieNaAvtomatKolegWPF.AddEkzamenWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Добавить экзамен" Height="382" Width="400">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:ZadanieNaAvtomatKolegWPF"
+        mc:Ignorable="d"
+	Title="Добавить экзамен" Height="382" Width="400">
 	<Grid>
 		<StackPanel Margin="10">
 			<TextBlock Text="ID Учебного плана:" Margin="0,0,0,5"/>
