--- a/ZadanieNaAvtomatKolegWPF/EditOcenkaWindow.xaml
+++ b/ZadanieNaAvtomatKolegWPF/EditOcenkaWindow.xaml
@@ -1,7 +1,11 @@
-﻿<Window x:Class="ZadanieNaAvtomatKollegWPFNET1.EditOcenkaWindow"
+﻿<Window x:Class="ZadanieNaAvtomatKolegWPF.EditOcenkaWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Изменение оценки" Height="200" Width="300">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:ZadanieNaAvtomatKolegWPF"
+        mc:Ignorable="d"
+              Title="Изменение оценки" Height="200" Width="300">
 	<Grid>
 		<StackPanel Margin="20">
 			<TextBlock Text="Новая оценка:" FontSize="14"/>
