--- a/ZadanieNaAvtomatKolegWPF/PrepodovatelWindow.xaml
+++ b/ZadanieNaAvtomatKolegWPF/PrepodovatelWindow.xaml
@@ -1,7 +1,11 @@
-﻿<Window x:Class="ZadanieNaAvtomatKollegWPFNET1.PrepodovatelWindow"
+﻿<Window x:Class="ZadanieNaAvtomatKolegWPF.PrepodovatelWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Преподаватель" Height="450" Width="800">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:ZadanieNaAvtomatKolegWPF"
+        mc:Ignorable="d"
+             Title="Преподаватель" Height="450" Width="800">
 	<Grid>
 		<Grid.RowDefinitions>
 			<RowDefinition Height="Auto"/>
